--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.11.6",
-    "electron": "^10.1.1"
+    "electron": "^10.1.1",
+    "electron-reload": "^1.5.0"
   },
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
