--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "dotenv-webpack": "^2.0.0",
     "electron": "^10.1.1",
     "electron-reload": "^1.5.0"
   },
