--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@reduxjs/toolkit": "^1.4.0",
     "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.2",
     "css-loader": "^4.2.2",
