--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "watch": "webpack --config webpack.common.js --watch"
+    "watch": "webpack --config webpack.common.js --watch",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "Filip Jerga",
   "license": "ISC",
@@ -13,7 +14,8 @@
     "@babel/core": "^7.11.6",
     "dotenv-webpack": "^2.0.0",
     "electron": "^10.1.1",
-    "electron-reload": "^1.5.0"
+    "electron-reload": "^1.5.0",
+    "webpack-merge": "^5.1.4"
   },
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
